--- a/view/front-office/nav.html
+++ b/view/front-office/nav.html
@@ -31,12 +31,12 @@
           <li class="menu-read">
 
             <a href="#">Lecture <i class="fas fa-chevron-right"></i></a>
-            <!-- <ul class="submenu">
+            <ul class="submenu">
               <li><a href="#">Chapitre 1</a></li>
               <li><a href="#">Chapitre 2</a></li>
               <li><a href="#">Chapitre 3</a></li>
               <li><a href="#">Chapitre 4</a></li>
-            </ul> -->
+            </ul>
 
           </li>
           <li><a href="#">À propos</a></li>
