--- a/public/css/style-front-office.css
+++ b/public/css/style-front-office.css
@@ -64,6 +64,29 @@ h1.logo#menu-title {
   justify-content: space-between;
 }
 
-.submenu {
-  display: none;
+#menu-content .menu-read {
+  position: relative;
+}
+
+#menu-content .menu-read:hover .submenu {
+  visibility: visible;
+}
+
+#menu-content .menu-read .submenu {
+  position: absolute;
+  left: 100%;
+  top: -200%;
+  visibility: hidden;
+}
+
+#menu-content li {
+  background-color: white;
+}
+
+#menu-content .submenu li:first-child {
+  border-top-right-radius: 10px;
+}
+
+#menu-content .submenu li:last-child {
+  border-bottom-right-radius: 10px;
 }
