--- a/public/css/style-global.css
+++ b/public/css/style-global.css
@@ -87,7 +87,7 @@ h1.logo {
   height: 100%;
 }
 
-#menu-content a:hover {
+#menu-content li:hover {
   background-color: #e6e6e6;
   cursor: pointer;
 }
