--- a/view/back-office/nav.html
+++ b/view/back-office/nav.html
@@ -10,7 +10,7 @@
   <title>Jean Forteroche</title>
 </head>
 
-<body class="front-office">
+<body class="back-office">
 
   <nav id="nav">
 
@@ -21,20 +21,10 @@
         <img class="menu-separator menu-separator-1" src="../../public/img/trenner3.svg" alt="separator">
 
         <ul id="menu-list">
-          <li><a href="#">Accueil</a></li>
-          <li class="menu-read">
-
-            <a href="#">Lecture <i class="fas fa-chevron-right"></i></a>
-            <!-- <ul class="submenu">
-              <li><a href="#">Chapitre 1</a></li>
-              <li><a href="#">Chapitre 2</a></li>
-              <li><a href="#">Chapitre 3</a></li>
-              <li><a href="#">Chapitre 4</a></li>
-            </ul> -->
-
-          </li>
-          <li><a href="#">À propos</a></li>
-          <li><a href="#">Connexion</a></li>
+          <li><a href="#">Administration</a></li>
+          <li><a href="#">Modération</a></li>
+          <li><a href="#">Autre</a></li>
+          <li><a href="#">Autre</a></li>
         </ul>
         <img class="menu-separator menu-separator-2" src="../../public/img/trenner3.svg" alt="separator">
       </div>
