--- a/view/front-office/template.html
+++ b/view/front-office/template.html
@@ -21,7 +21,7 @@
 
     <div id="menu">
 
-      <h1 id="menu-title" class="logo">Jean Forteroche</h1>
+      <h2 id="menu-title" class="logo">Jean Forteroche</h2>
       <div id="menu-content">
 
         <img class="menu-separator menu-separator-1" src="../../public/img/trenner3.svg" alt="separator">
@@ -62,6 +62,15 @@
 
     </div>
   </nav>
+  
+  <header>
+    <h1 class="logo">Jean Forteroche</h1>
+  </header>
+
+  <div id="page" class="page-name">
+
+
+  </div>
 
   <script src="../../public/js/script.js"></script>
 </body>
