--- a/public/css/style-global.css
+++ b/public/css/style-global.css
@@ -15,10 +15,13 @@
 
 body {
   background-color: #94bcc6;
+  display: grid;
   font-family: "Dejavu Sans";
-  height: 1660px;
+  grid-template-columns: repeat(20, 5vw);
+  grid-template-rows: repeat(10, 10vh);
   margin: 0;
-  padding: 0
+  padding: 0;
+
 }
 
 a {
@@ -32,7 +35,7 @@ a {
 ##############################
 */
 
-h1.logo {
+.logo {
   font-family: Mytwentyone;
   font-style: italic;
   font-weight: 200;
@@ -48,10 +51,9 @@ h1.logo {
 */
 
 #nav {
-  height: 100vh;
-  position: fixed;
+  grid-column: 1/4;
+  grid-row: 1/11;
   user-select: none;
-  width: 15%;
 }
 
 #menu {
@@ -99,4 +101,16 @@ h1.logo {
 
 #menu .menu-separator-2 {
   transform: rotateX(180deg);
+}
+
+/* 
+##############################
+###         HEADER         ###
+##############################
+*/
+
+header {
+  grid-column: 1/21;
+  grid-row: 1/1;
+  padding: 0 2%;
 }
