style of section #content
- style
- size
- position
- scrollbar

--- a/public/css/style-front-office.css
+++ b/public/css/style-front-office.css
@@ -106,3 +106,13 @@ header h1.logo{
   font-size: 3em;
   text-align: right;
 }
+
+/* 
+##############################
+###         CONTENT        ###
+##############################
+*/
+
+#nav.on ~ section#content {
+  grid-column: 5/20;
+}
