--- a/view/front-office/template.html
+++ b/view/front-office/template.html
@@ -67,10 +67,7 @@
     <h1 class="logo">Jean Forteroche</h1>
   </header>
 
-  <div id="page" class="page-name">
-
-
-  </div>
+  <section id="content" class="page-name"></section>
 
   <script src="../../public/js/script.js"></script>
 </body>
