change id content to content-container

--- a/public/css/style-front-office.css
+++ b/public/css/style-front-office.css
@@ -113,6 +113,6 @@ header h1.logo{
 ##############################
 */
 
-#nav.on ~ section#content {
+#nav.on ~ section#content-container {
   grid-column: 5/20;
 }
