--- a/view/front-office/template.html
+++ b/view/front-office/template.html
@@ -67,7 +67,7 @@
     <h1 class="logo">Jean Forteroche</h1>
   </header>
 
-  <section id="content" class="page-name"></section>
+  <section id="content-container" class="page-name"></section>
 
   <script src="../../public/js/script.js"></script>
 </body>
