--- a/view/back-office/nav.html
+++ b/view/back-office/nav.html
@@ -31,6 +31,13 @@
 
     </div>
   </nav>
+  
+  <header>
+    <h1 class="logo">Jean Forteroche</h1>
+    <a href="#">Déconnexion</a>
+  </header>
+
+  <section id="content-container" class="page-name"></section>
 
 </body>
 </html>
