edit color header a:hover, rename back-office/nav.html to template.html

--- a/public/css/style-back-office.css
+++ b/public/css/style-back-office.css
@@ -34,6 +34,16 @@ header h1.logo{
   text-align: left;
 }
 
+header a:hover {
+  color: black;
+}
+
+/* 
+##############################
+###         CONTENT        ###
+##############################
+*/
+
 section#content-container {
   grid-column: 4/21;
   grid-row-end: 11;
