--- a/public/css/style-front-office.css
+++ b/public/css/style-front-office.css
@@ -120,3 +120,44 @@ header h1.logo{
 #nav.on ~ section#content-container {
   grid-column: 5/20;
 }
+
+
+/* 
+##############################
+###       PAGE STYLE       ###
+##############################
+*/
+
+/* ACCUEIL */
+
+section#content-container.accueil {
+  background-color: #94bcc6;
+  grid-column: 1/21;
+  grid-row: 1/11;
+  text-align: center;
+}
+
+section#content-container.accueil .logo {
+  font-size: 10rem;
+}
+
+section#content-container.accueil img:hover {
+  box-shadow: 2px 2px 4px black;
+  cursor: pointer;
+  transform: scale(1.01);
+}
+
+section#content-container.accueil .icons-container {
+  margin: 3% auto 0 auto;
+  width: 40%;
+}
+
+section#content-container.accueil .icon-circle {
+  border-color: white;
+  border-width: 4px;
+  color: white;
+  font-size: 2rem;
+  height: 2.875rem;
+  line-height: 2.875rem;
+  width: 2.875rem;
+}
