--- a/public/css/style-front-office.css
+++ b/public/css/style-front-office.css
@@ -283,3 +283,57 @@ section#content-container.login input#submit:focus {
 section#content-container.login input#submit:active {
   box-shadow: unset;
 }
+
+/* READ */
+
+section#content-container.read-synopsis > div {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 80%;
+}
+
+section#content-container.read-synopsis > div > article {
+  margin: 0 auto;
+  text-align: justify;
+  width: 60%;
+}
+
+section#content-container.read-synopsis h2 {
+  margin: 0;
+  text-align: center;
+}
+
+section#content-container.read-synopsis form {
+  text-align: center;
+}
+
+section#content-container.read-synopsis form select, section#content-container.read-synopsis form input {
+  background-color: white;
+  border: 2px solid white;
+  border-radius: 2.5vh;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1rem;
+  font-weight: bold;
+  height: 4vh;
+  margin: 2.5vh auto;
+  padding: 0.5vh 1vw;
+  width: 10vw;
+}
+
+section#content-container.read-synopsis form select:focus {
+  border: 2px solid #d43232;
+  outline: unset;
+}
+
+section#content-container.read-synopsis form input {
+  border: unset;
+  box-shadow: 2px 2px 3px #888888;
+  outline: unset;
+}
+
+section#content-container.read-synopsis form input:active {
+  box-shadow: unset;
+}
