--- a/public/css/style-back-office.css
+++ b/public/css/style-back-office.css
@@ -1,3 +1,14 @@
+@keyframes arrow-left-right {
+  0%{
+    transform: translateX(0);
+  }
+  50%{
+    transform: translateX(-20%);
+  }
+  100%{
+    transform: translateX(0);
+  }
+}
 /*
 ##############################
 ###          BASE          ###
@@ -47,4 +58,36 @@ header a:hover {
 section#content-container {
   grid-column: 4/21;
   grid-row-end: 11;
+}
+
+/* 
+##############################
+###       PAGE STYLE       ###
+##############################
+*/
+
+/* ---- ACCUEIL ---- */
+
+section#content-container.accueil #content {
+  display: flex;
+  flex-direction: column;
+  height: 80%;
+  justify-content: center;
+}
+
+section#content-container.accueil #content h2 {
+  font-size: 2rem;
+  text-align: center;
+}
+
+section#content-container.accueil #content > div {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  font-size: 1.2rem;
+}
+
+section#content-container.accueil #content > div i {
+  animation: arrow-left-right 1s infinite linear;
+  font-size: 2.4rem;
 }
