replaces the value of the button's "type" attribute with "submit"

--- a/view/back-office/edition.html
+++ b/view/back-office/edition.html
@@ -44,7 +44,7 @@
       <form method="POST">
         <label for="chapter-title">Titre du chapitre : <input type="text" name="chapter-title" id="chapter-title"/></label>
         <textarea name="chapter-content" id="chapter-content" cols="30" rows="42"></textarea>
-        <input id="submit" type="button" value="Enregistrer">
+        <input id="submit" type="submit" value="Enregistrer">
       </form>
     </article>
   </section>
