--- a/public/css/style-front-office.css
+++ b/public/css/style-front-office.css
@@ -342,3 +342,104 @@ section#content-container.read-chapter > div {
   margin: 0 auto;
   width: 90%;
 }
+
+section#content-container.read-chapter #chapter-content {
+  margin-bottom: 5vh;
+}
+
+section#content-container.read-chapter #comments-container #head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+section#content-container.read-chapter #comments-container #head hr {
+  border-style: dashed;
+  border-width: 1px;
+  margin: 0;
+  width: 43%;
+}
+
+section#content-container.read-chapter #comments-container #head p {
+  font-size: 1.2rem;
+  border: 1px solid black;
+}
+
+section#content-container.read-chapter #comments-container #comments {
+  padding: 0;
+}
+
+section#content-container.read-chapter #comments-container #comments .comment {
+  border-bottom: 1px solid #94bcc6;
+  list-style-type: none;
+}
+
+section#content-container.read-chapter #comments-container #comments .comment-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+section#content-container.read-chapter #comments-container #comments .comment-header a {
+  color: #d43232;
+}
+
+section#content-container.read-chapter #comments-container #comments .comment-content {
+  text-align: justify;
+}
+
+#comment-form-container {
+  min-height: 2vw;
+  position: relative;
+}
+
+#check {
+  border: 0.5px solid red;
+  cursor: pointer;
+  height: 2vw;
+  margin: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+}
+
+#comment-form-container > p {
+  display: flex;
+  justify-content: space-between;
+  line-height: 2vw;
+  margin: 0 auto;
+  width: 40%;
+}
+
+#comment-form-container > p i {
+  font-size: 2rem;
+}
+
+#check {
+  opacity: 0;
+}
+
+#comment-form-container hr {
+  border: 0.5px solid black;
+  position: absolute;
+  margin: 0;
+  width: 100%;
+}
+
+#comment-form-container hr:last-child {
+  bottom: 0;
+}
+
+section#content-container.read-chapter #comment-form {
+  display: none;
+}
+
+section#content-container.read-chapter #comment-form input {
+  margin: 1vw 0;
+  width: 20%;
+}
+
+#comment-form-container #check:checked ~ form {
+  display: flex;
+  flex-direction: column;
+}
