--- a/public/css/style-front-office.css
+++ b/public/css/style-front-office.css
@@ -256,6 +256,94 @@ section#content-container.login input#submit:active {
   box-shadow: unset;
 }
 
+section#content-container.login a {
+  color: #d43232;
+}
+
+/* ---- REGISTRATION ---- */
+
+section#content-container.registration {
+  background-color: #94bcc6;
+  grid-row-start: 3;
+  text-align: center;
+}
+
+section#content-container.registration h2 {
+  font-size: 4rem;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 400;
+  margin: 0;
+}
+
+section#content-container.registration hr {
+  margin: 0 auto;
+  border: 1px solid white;
+  width: 5vw
+}
+
+section#content-container.registration form {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: 5% auto 0 auto;
+}
+
+section#content-container.registration label {
+  align-items: center;
+  display: flex;
+}
+
+section#content-container.registration i {
+  background-color: white;
+  border-radius: 2.875rem;
+  color: #94bcc6;
+  font-size: 1.5rem;
+  height: 2.875rem;
+  line-height: 2.875rem;
+  margin: 0 1vw;
+  width: 2.875rem;
+}
+
+section#content-container.registration input {
+  border: 2px solid white;
+  border-radius: 2.5vh;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 1rem;
+  font-weight: bold;
+  height: 4vh;
+  margin: 2.5vh auto;
+  padding: 0.5vh 1vw;
+  width: 19vw;
+}
+
+section#content-container.registration input::placeholder {
+  color: #94bcc6;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+section#content-container.registration input:focus {
+  border: 2px solid #d43232;
+  outline: unset;
+}
+
+section#content-container.registration input#submit {
+  background-color: white;
+  border: unset;
+  box-shadow: 2px 2px 3px #888888;
+  color: #d43232;
+  font-size: 1.5rem;
+  width: 12vw;
+}
+
+section#content-container.registration input#submit:focus {
+  border: unset;
+}
+
+section#content-container.registration input#submit:active {
+  box-shadow: unset;
+}
+
 /* ---- READ ---- */
 
 section#content-container.read-synopsis > div {
@@ -365,7 +453,6 @@ section#content-container.read-chapter #comments-container #comments .comment-co
 }
 
 #check {
-  border: 0.5px solid red;
   cursor: pointer;
   height: 2vw;
   margin: 0;
@@ -418,13 +505,8 @@ section#content-container.read-chapter #comment-form input {
 
 /* ---- ERROR ---- */
 
-<<<<<<< HEAD
 section#content-container.error #error-message {
   color: #bd1b1b;
-=======
-section#content-container.error h2#error-message {
-  color: #db1b1b;
->>>>>>> back-end
   font-size: 3rem;
   text-align: center;
 }
