--- a/public/css/style-back-office.css
+++ b/public/css/style-back-office.css
@@ -204,7 +204,7 @@ section#content-container.edition #content form input#submit {
   width: 10vw;
 }
 
-/* MODERATION */
+/* ---- MODERATION ---- */
 
 section#content-container.moderation #content table {
   border-collapse: collapse;
@@ -219,10 +219,24 @@ section#content-container.moderation #content table th, section#content-containe
 
 section#content-container.moderation #content table th:first-child {
   border-top-left-radius: 10px;
+  width: 10%;
+}
+
+section#content-container.moderation #content table th:nth-child(2) {
+  width: 18%;
+}
+
+section#content-container.moderation #content table th:nth-child(3) {
+  width: 56%;
+}
+
+section#content-container.moderation #content table th:nth-child(4) {
+  width: 8%;
 }
 
 section#content-container.moderation #content table th:last-child {
   border-top-right-radius: 10px;
+  width: 8%;
 }
 
 section#content-container.moderation #content table thead {
@@ -233,11 +247,27 @@ section#content-container.moderation #content table tbody tr {
   background-color: rgba(148, 188, 198, 0.4);
 }
 
+section#content-container.moderation #content table tbody tr td:last-child {
+  text-align: center;
+}
+
 section#content-container.moderation #content table tbody tr:hover {
   background-color: rgb(148, 188, 198);
 }
 
 section#content-container.moderation #content table a {
-  color: red;
+  color: black;
   text-decoration: underline;
+}
+
+section#content-container.moderation #content table a i:hover {
+  transform: scale(1.5);
+}
+
+section#content-container.moderation #content table a i.fa-check:hover {
+  color: blue;
+}
+
+section#content-container.moderation #content table a i.fa-trash:hover {
+  color: red;
 }
